# kanade

./: .gitignore  CLAUDE.md  README.md  biome.json  index.html  package-lock.json  package.json  vitest.config.ts
.github/: dependabot.yml
.github/workflows/: ci.yml  pr-review.yml
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  permissions.rs  tray.rs
src/__tests__/components/: SendToCCButton.test.tsx
src/__tests__/hooks/: use-live-api.edge.test.ts  use-live-api.test.ts  use-live-api.transcript.test.ts  use-settings.test.ts
src/__tests__/lib/: audio-utils.test.ts  briefing-loader.test.ts  cc-notifier.test.ts  summarizer.test.ts  summary-writer.test.ts
src/components/: ControlTray.tsx  SendToCCButton.tsx  SettingsPanel.tsx  VoiceIndicator.tsx
src/hooks/: use-audio-input.ts  use-audio-output.ts  use-live-api.ts  use-settings.ts  use-transcript.ts
src/lib/: audio-context.ts  audio-recorder.ts  audio-streamer.ts  audio-utils.ts  audioworklet-registry.ts  briefing-loader.ts  cc-notifier.ts  summarizer.ts  summary-writer.ts
src/lib/worklets/: audio-processing.ts  vol-meter.ts
src/types/: index.ts  settings.ts
