[package]
name = "kanade"
version = "0.1.0"
description = "Kanade - Real-time voice chat with Gemini"
authors = ["yushin"]
license = "MIT"
repository = "https://github.com/yushin0319/kanade"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "kanade_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.2", features = ["tray-icon", "devtools"] }
tauri-plugin-log = "2"
tauri-plugin-store = "2"
dirs = "6"

[target.'cfg(windows)'.dependencies]
webview2-com = "0.38"
windows = { version = "0.61", features = ["Win32_System_WinRT"] }
